syntax = "proto3";

package gonews;

option go_package = "./pkg/pb";

service GoNewsService {
  rpc Posts(PostsRequest) returns (PostsResponse) {}
  rpc NewsFullDetailed(OneNewsRequest) returns (OnePostResponse) {}
  rpc NewsShortDetailed(OneNewsRequest) returns (OnePostResponse) {}
  rpc FilterNews(FilterNewsRequest) returns (PostsResponse) {}
  rpc ListNews(ListPostsRequest) returns (ListPostsResponse) {}
}

message PostsRequest {
  int64 newsCountGet = 1;
}

message OneNewsRequest {
  int64 newsId = 1;
}

message FilterNewsRequest {
  string filterValue = 2;
}

message Post {
  int64 ID = 1;
  string title = 2;
  string content = 3;
  int64 pubTime = 4;
  string link = 5;
  string sourceXmlLink = 6;
}

message OnePostResponse {
  int64 status = 1;
  string error = 2;
  Post posts = 3;
}

message PostsResponse {
  int64 status = 1;
  string error = 2;
  repeated Post posts = 3;
  }

message Pagination {
  int32 pages = 1;
  int32 currentPage = 2;
  int32 postsOnPage = 3;
}

message ListPostsRequest {
  int64 newsCountGet = 1;
  int64 user_id = 2;
  int32 page_size = 3;
  int32 page = 4;
}

message ListPostsResponse {
  int64 status = 1;
  string error = 2;
  Pagination paginationInfo = 3;
  repeated Post posts = 4;
}